# Comfyui-LayerForge

./: MASK_AUTO_LOADING_README.md  README.md  README_LOGGER.md  __init__.py  canvas_node.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_request.yml  feature-request.yaml  feature-request.yml
.github/workflows/: ComfyUIdownloads.yml  clone.yml  publish.yml  release.yml
Doc/: AutoMaskLoading
Showtime/: ShowTimeLayerForge.webm
example_workflows/: LayerForge_flux_fill_inpaint_example.json  LayerForge_test_simple_workflow.json  LayerForge_test_workflow.json
js/: BatchPreviewManager.js  Canvas.js  CanvasIO.js  CanvasInteractions.js  CanvasLayers.js  CanvasLayersPanel.js  CanvasMask.js  CanvasRenderer.js  CanvasSelection.js  CanvasState.js  CanvasView.js  Canvas_view.js  CommonUtils.js  CustomShapeMenu.js  ErrorHandler.js  ImageCache.js  ImageReferenceManager.js  ImageUtils.js  LoggerUtils.js  MaskEditorIntegration.js  MaskTool.js  Mask_tool.js  REFACTORING_GUIDE.md  SAMDetectorIntegration.js  ShapeTool.js  db.js  logger.js  state-saver.worker.js
js/css/: canvas_view.css  custom_shape_menu.css
js/examples/: mask_editor_examples.js
js/templates/: clipspace_clipboard_tooltip.html
js/utils/: ClipboardManager.js  CommonUtils.js  IconLoader.js  ImageAnalysis.js  ImageUploadUtils.js  ImageUtils.js  LoggerUtils.js  MaskProcessingUtils.js  NotificationUtils.js  PreviewUtils.js  ResourceManager.js  WebSocketManager.js  mask_utils.js
python/: logger.py
src/: BatchPreviewManager.ts  Canvas.ts  CanvasIO.ts  CanvasInteractions.ts  CanvasLayers.ts  CanvasLayersPanel.ts  CanvasMask.ts  CanvasRenderer.ts  CanvasSelection.ts  CanvasState.ts  CanvasView.ts  CustomShapeMenu.ts  MaskEditorIntegration.ts  MaskTool.ts  SAMDetectorIntegration.ts  ShapeTool.ts  config.ts  types.ts
src/css/: canvas_view.css  custom_shape_menu.css  layers_panel.css
src/templates/: standard_shortcuts.html
src/utils/: ClipboardManager.ts  CommonUtils.ts  IconLoader.ts  ImageAnalysis.ts  ImageUtils.ts  (+7 more)
