[project]
name = "comfyui-ycanvas"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "torchvision", "transformers", "aiohttp", "numpy", "tqdm", "Pillow"]

[project.urls]
Repository = "https:


[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-Ycanvas"
Icon = ""
